fixed some minor issues, getting rid of the sideways scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,8 @@ button{
 
 body{
   font-family: 'Barlow Semi Condensed';
-  height: 100vh;
+  overflow-x: hidden;
+  height: auto;
   margin: 0;
   position: relative;
   background-image: var(--background-gradient);
@@ -295,10 +296,11 @@ iframe{
   top: 0px;
   left: 0px;
   width: 100vw;
+  max-width: 100vw;
   background: var(--background-gradient);
   height: 70px;
   box-shadow: 0px 0px 10px 2px var(--glow-end);
-  padding-left: 5vw;
+  padding-left: 3vw;
   padding-right: 3vw;
   z-index: 30000;
   display: flex;
@@ -481,3 +483,6 @@ iframe{
  }
 }
 
+.cursive {
+  font-family: 'Neonderthaw';
+}
